--- a/views/index.html
+++ b/views/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Popper JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <!-- Latest compiled JavaScript -->
-  <script src="../js/bootstrap.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
   <div class="jumbotron">
